@@ -1,5 +1,6 @@
 package com.lilknig.emberapi.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -9,33 +10,60 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * CORS Configuration - Best Practices
+ *
+ * Configures Cross-Origin Resource Sharing (CORS) for the API.
+ * This is essential for frontend applications running on different domains.
+ *
+ * Security Note:
+ * - In production, restrict allowed origins to your actual frontend domains
+ * - Never use "*" for allowedOrigins when allowCredentials is true
+ * - Configure via application.properties for environment-specific settings
+ */
 @Configuration
 public class CorsConfig {
+
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:4200,http://localhost:5173}")
+    private String[] allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow specific origins (modify as needed for production)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "http://localhost:4200",
-                "http://localhost:5173",
-                "http://localhost:8080"
+        // Allowed origins - Configure in application.properties for each environment
+        // Production: app.cors.allowed-origins=https://yourdomain.com,https://app.yourdomain.com
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
+
+        // Allowed HTTP methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
         ));
 
-        // Allow all HTTP methods
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        // Allowed headers - Be specific in production for better security
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
 
-        // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
+        // Exposed headers - Headers that browser JavaScript can access
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Disposition"
+        ));
 
-        // Allow credentials (important for OAuth2)
+        // Allow credentials (cookies, authorization headers) - Important for OAuth2
         configuration.setAllowCredentials(true);
 
-        // Max age for preflight requests
+        // Cache preflight response for 1 hour (reduces OPTIONS requests)
         configuration.setMaxAge(3600L);
 
+        // Apply CORS configuration to all endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
